In Progress - Inventory 360

--- a/displaytabs/EmployeeUI-MainTemplate.html
+++ b/displaytabs/EmployeeUI-MainTemplate.html
@@ -24,7 +24,7 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTab" module="PersonTaskUI" tabUrl="ToDoList"></div>
+                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
                                 <div class="DisplayTab" tabUrl="Leave"></div>
                                 <div class="DisplayTab" tabUrl="NewHires"></div>
                             </div>
@@ -39,7 +39,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="DashboardSearchEmployee"></div>
+                                <div class="DisplayTabCommon" tabName="dashboard" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                                 <div class="DisplayTab" tabUrl="Experience"></div>
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="ProfileSearchEmployee"></div>
+                                <div class="DisplayTabCommon" tabName="profile" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                                 <div class="DisplayTab" tabUrl="Payroll"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="FinanceSearchEmployee"></div>
+                                <div class="DisplayTabCommon" tabName="finance" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                                 <div class="DisplayTab" tabUrl="Performance"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="PerformanceSearchEmployee"></div>
+                                <div class="DisplayTabCommon" tabName="performance" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
                     </div>
