--- a/displaytabs/HrRequisitionUI-MainTemplate.html
+++ b/displaytabs/HrRequisitionUI-MainTemplate.html
@@ -27,7 +27,7 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" module="PersonTaskUI" tabUrl="ToDoList"></div>
+                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
                                 <div class="DisplayTab" tabUrl="Stages"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
@@ -123,7 +123,7 @@
                     <div class="tab-pane" id="RecruitersAndManagers">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="RecruitersAndManagersProfile"></div>
+                                <div class="DisplayTabCommon" tabUrl="EmployeeProfile"></div>
                                 <div class="DisplayTab" tabUrl="RecruitersAndManagersRequisition"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
