--- a/displaytabs/InventoryUI-MainTemplate.html
+++ b/displaytabs/InventoryUI-MainTemplate.html
@@ -31,7 +31,7 @@
                     <div class="tab-pane" id="EquipmentsMaterials">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="ToDoList"></div>
+                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
                                 <div class="DisplayTab" tabUrl="ActivePOForProduct"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
