--- a/displaytabs/tabs/common/SearchProduct.html
+++ b/displaytabs/tabs/common/SearchProduct.html
@@ -8,10 +8,10 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchEmployeeFilter" module="EmployeeUI" tab="dashboard" placeholder="Search Employee">
+            <input type="text" class="form-control searchProductFilter" module="ProductUI" tab="_TABNAME_" placeholder="Search Product">
         </div>
     </div>
 
-    <div class="box-body searchEmployees" module="EmployeeUI" tab="dashboard" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchProducts" module="ProductUI" tab="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
