In Progress - Recruitment 360 Applicant Experience

--- a/displaytabs/HrRequisitionUI-MainTemplate.html
+++ b/displaytabs/HrRequisitionUI-MainTemplate.html
@@ -116,7 +116,7 @@
                                 <div class="DisplayTab" tabUrl="ApplicantInterviewDetail"></div>
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="SearchApplicant"></div>
+                                <div class="DisplayTab" tabName="Applicants" tabUrl="SearchApplicant"></div>
                             </div>
                         </div>
                     </div>
