--- a/displaytabs/tabs/HrRequisitionUI/SearchApplicant.html
+++ b/displaytabs/tabs/HrRequisitionUI/SearchApplicant.html
@@ -5,7 +5,12 @@
         <h3 class="box-title">Search Applicant</h3>
     </div>
     <div class="box-body">
-        <div class="myTeamRequisition" style="margin:5px; max-height: 500px; overflow-y: auto;">
+        <div class="form-group">
+            <input type="text" class="form-control searchApplicantFilter" module="HrRequisitionUI" tab="_TABNAME_" placeholder="Search Employee">
+        </div>
+    </div>
+    <div class="box-body">
+        <div class="HrRequisitionUI_ApplicantSearchList" tabName="_TABNAME_" style="margin:5px; max-height: 500px; overflow-y: auto;">
         </div>
     </div>
 </div>
