--- a/displaytabs/tabs/HrRequisitionUI/ApplicantProfile.html
+++ b/displaytabs/tabs/HrRequisitionUI/ApplicantProfile.html
@@ -2,23 +2,20 @@
 
 <div class="box box-default">
     <div class="box-body box-profile">
-        <img class="profile-user-img img-responsive img-circle" src="dist/img/user4-128x128.jpg" alt="User profile picture">
+        <img class="profile-user-img img-responsive img-circle profilePic HrRequisitionUI_Applicants_ApplicantPic" 
+            name="profilePic" module="HrApplicantUI" alt="User profile picture" style="display: none;">
 
-        <h3 class="profile-username text-center">Nina Mcintire</h3>
+        <h3 class="profile-username text-center HrRequisitionUI_Applicants_ApplicantName">--</h3>
 
-        <p class="text-muted text-center">Software Engineer</p>
+        <p class="text-muted text-center HrRequisitionApplicantUI_Applicants_ApplicantJob">--</p>
 
         <ul class="list-group list-group-unbordered">
             <li class="list-group-item">
-                <b>Followers</b> <a class="pull-right">1,322</a>
+                <b>Email</b> <a class="pull-right HrRequisitionApplicantUI_Applicants_ApplicantEmail">--</a>
             </li>
             <li class="list-group-item">
-                <b>Following</b> <a class="pull-right">543</a>
-            </li>
-            <li class="list-group-item">
-                <b>Friends</b> <a class="pull-right">13,287</a>
+                <b>Contact</b> <a class="pull-right HrRequisitionApplicantUI_Applicants_ApplicantContact">--</a>
             </li>
         </ul>
-        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
     </div>
 </div>
