--- a/displaytabs/tabs/HrRequisitionUI/ApplicantExperience.html
+++ b/displaytabs/tabs/HrRequisitionUI/ApplicantExperience.html
@@ -12,24 +12,7 @@
     </div>
     <div class="box-body box-profile">
         <ul class="timeline timeline-inverse HrRequisitionUI_ApplicantExperienceList">
-            <li class="time-label">
-                <span class="bg-red">
-                    10 Feb. 2014
-                </span>
-            </li>
-            <li>
-                <i class="fa fa-fw fa-gear bg-blue"></i>
-                <div class="timeline-item">
-                    <span class="time"><i class="fa fa-clock-o"></i> 12:05</span>
-                    <h3 class="timeline-header"><a href="#">Support Team</a> sent you an email</h3>
-                    <div class="timeline-body">
-                        Etsy doostang zoodles disqus groupon greplin oooj voxy zoodles,
-                        weebly ning heekya handango imeem plugg dopplr jibjab, movity
-                        jajah plickers sifteo edmodo ifttt zimbra. Babblely odeo kaboodle
-                        quora plaxo ideeli hulu weebly balihoo...
-                    </div>
-                </div>
-            </li>
+            <b>Please select applicant</b>
         </ul>
     </div>
 </div>
