--- a/displaytabs/tabs/HrRequisitionUI/ApplicantReference.html
+++ b/displaytabs/tabs/HrRequisitionUI/ApplicantReference.html
@@ -1,38 +1,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
 <div class="box box-default">
-    <div class="box-header with-border">
+    <div class="box-header ui-sortable-handle" style="cursor: move;">
+        <i class="fa fa-comments-o"></i>
         <h3 class="box-title">Reference</h3>
+        <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
+            <button type="button" class="btn btn-default pull-right HrRequisitionUI_btnAddApplicantReference"
+                data-toggle="modal" data-target="#HrRequisitionUI_ApplicantReferenceDialog"><i class="fa fa-plus"></i>
+                Add Reference</button>
+        </div>
     </div>
-    <div class="box-body">
-        <strong><i class="fa fa-book margin-r-5"></i> Education</strong>
-
-        <p class="text-muted">
-            B.S. in Computer Science from the University of Tennessee at Knoxville
-        </p>
-
-        <hr>
-
-        <strong><i class="fa fa-map-marker margin-r-5"></i> Location</strong>
-
-        <p class="text-muted">Malibu, California</p>
-
-        <hr>
-
-        <strong><i class="fa fa-pencil margin-r-5"></i> Skills</strong>
-
-        <p>
-            <span class="label label-danger">UI Design</span>
-            <span class="label label-success">Coding</span>
-            <span class="label label-info">Javascript</span>
-            <span class="label label-warning">PHP</span>
-            <span class="label label-primary">Node.js</span>
-        </p>
-
-        <hr>
-
-        <strong><i class="fa fa-file-text-o margin-r-5"></i> Notes</strong>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam fermentum enim neque.</p>
+    <div class="box-body box-profile">
+        <ul class="list-group list-group-unbordered HrRequisitionUI_Applicants_Reference">
+            <b>Please select applicant</b>
+        </ul>
     </div>
 </div>
