In Progress - Recruitment 360 Recruiters and Managers

--- a/displaytabs/HrRequisitionUI-MainTemplate.html
+++ b/displaytabs/HrRequisitionUI-MainTemplate.html
@@ -123,14 +123,14 @@
                     <div class="tab-pane" id="RecruitersAndManagers">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabUrl="EmployeeProfile"></div>
+                                <div class="DisplayTabCommon" tabName="RecruitersAndManagers" tabUrl="EmployeeProfile"></div>
                                 <div class="DisplayTab" tabUrl="RecruitersAndManagersRequisition"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="RecruitersAndManagersInterviewDetail"></div>
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="SearchRecruitersAndManagers"></div>
+                                <div class="DisplayTabCommon" tabName="RecruitersAndManagers" tabUrl="SearchEmployee"></div>
                             </div>
                         </div>
                     </div>
