--- a/displaytabs/tabs/common/EmployeeProfile.html
+++ b/displaytabs/tabs/common/EmployeeProfile.html
@@ -2,23 +2,21 @@
 
 <div class="box box-default">
     <div class="box-body box-profile">
-        <img class="profile-user-img img-responsive img-circle" src="dist/img/user4-128x128.jpg" alt="User profile picture">
+        <img class="profile-user-img img-responsive img-circle profilePic EmployeeUI_ProfilePic" 
+            name="profilePic" module="EmployeeUI" tabName="_TABNAME_" alt="User profile picture" style="display: none;">
 
-        <h3 class="profile-username text-center">Nina Mcintire</h3>
+        <h3 class="profile-username text-center EmployeeUI_EmployeeName" tabName="_TABNAME_">--</h3>
 
-        <p class="text-muted text-center">Software Engineer</p>
+        <p class="text-muted text-center EmployeeUI_Employee_Job" tabName="_TABNAME_">--</p>
 
         <ul class="list-group list-group-unbordered">
             <li class="list-group-item">
-                <b>Followers</b> <a class="pull-right">1,322</a>
+                <b>Email</b> <a class="pull-right EmployeeUI_Employee_Email" tabName="_TABNAME_">--</a>
             </li>
             <li class="list-group-item">
-                <b>Following</b> <a class="pull-right">543</a>
-            </li>
-            <li class="list-group-item">
-                <b>Friends</b> <a class="pull-right">13,287</a>
+                <b>Contact</b> <a class="pull-right EmployeeUI_Employee_Contact" tabName="_TABNAME_">--</a>
             </li>
         </ul>
-        <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a>
     </div>
 </div>
+
