--- a/displaytabs/tabs/HrRequisitionUI/SearchApplicant.html
+++ b/displaytabs/tabs/HrRequisitionUI/SearchApplicant.html
@@ -6,7 +6,7 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchApplicantFilter" module="HrRequisitionUI" tab="_TABNAME_" placeholder="Search Employee">
+            <input type="text" class="form-control searchApplicantFilter" module="HrRequisitionUI" tabName="_TABNAME_" placeholder="Search Employee">
         </div>
     </div>
     <div class="box-body">
