--- a/displaytabs/tabs/common/SearchEmployee.html
+++ b/displaytabs/tabs/common/SearchEmployee.html
@@ -8,10 +8,10 @@
     </div>
     <div class="box-body">
         <div class="form-group">
-            <input type="text" class="form-control searchEmployeeFilter" module="EmployeeUI" tab="_TABNAME_" placeholder="Search Employee">
+            <input type="text" class="form-control searchEmployeeFilter" module="EmployeeUI" tabName="_TABNAME_" placeholder="Search Employee">
         </div>
     </div>
 
-    <div class="box-body searchEmployees" module="EmployeeUI" tab="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body searchEmployees" module="EmployeeUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
