In Progress - Recruitment 360

--- a/displaytabs/HrRequisitionUI-MainTemplate.html
+++ b/displaytabs/HrRequisitionUI-MainTemplate.html
@@ -132,7 +132,7 @@
                                 <div class="DisplayTab" tabUrl="Fulfilled"></div>
                             </div>
                             <div style="flex: 20%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="RecruitersAndManagers" tabUrl="SearchJob"></div>
+                                <div class="DisplayTabCommon" tabName="Fulfilled" tabUrl="SearchJob"></div>
                             </div>
                         </div>
                     </div>
