--- a/displaytabs/tabs/HrRequisitionUI/Fulfilled.html
+++ b/displaytabs/tabs/HrRequisitionUI/Fulfilled.html
@@ -5,7 +5,7 @@
         <i class="fa fa-comments-o"></i>
         <h3 class="box-title">Fulfilled</h3>
     </div>
-    <div class="box-body box-profile HrRequisitionUI_FulfilledList">
+    <div class="box-body HrRequisitionUI_FulfilledList" style="display: flex; flex-wrap: wrap; background: #ecf0f5;">
         <b>No Fulfilled Jobs Found!</b>
     </div>
 </div>
