In Progress - Employee 360 Profile

--- a/displaytabs/tabs/EmployeeUI/EmployeeReference.html
+++ b/displaytabs/tabs/EmployeeUI/EmployeeReference.html
@@ -3,15 +3,15 @@
 <div class="box box-default">
     <div class="box-header ui-sortable-handle" style="cursor: move;">
         <i class="fa fa-comments-o"></i>
-        <h3 class="box-title">Experience</h3>
+        <h3 class="box-title">Reference</h3>
         <div class="box-tools pull-right" data-toggle="tooltip" title="" data-original-title="Status">
-            <button type="button" class="btn btn-default pull-right EmployeeUI_btnAddEmployeeExperience"
-                data-toggle="modal" data-target="#EmployeeUI_EmployeeExperienceDialog"><i class="fa fa-plus"></i>
-                Add Experience</button>
+            <button type="button" class="btn btn-default pull-right EmployeeUI_btnAddEmployeeReference"
+                data-toggle="modal" data-target="#EmployeeUI_EmployeeReferenceDialog"><i class="fa fa-plus"></i>
+                Add Reference</button>
         </div>
     </div>
     <div class="box-body box-profile">
-        <ul class="timeline timeline-inverse EmployeeUI_EmployeeExperienceList">
+        <ul class="list-group list-group-unbordered EmployeeUI_Employee_Reference">
             <b>Please select employee</b>
         </ul>
     </div>
