--- a/displaytabs/EmployeeUI-MainTemplate.html
+++ b/displaytabs/EmployeeUI-MainTemplate.html
@@ -16,17 +16,17 @@
                     <li class="tab-pane">
                         <a href="#Finance" data-toggle="tab" aria-expanded="false">Finance</a>
                     </li>
-                    <li class="tab-pane">
+                    <!-- <li class="tab-pane">
                         <a href="#Performance" data-toggle="tab" aria-expanded="false">Performance</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
                                 <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
-                                <div class="DisplayTab" tabUrl="Leave"></div>
-                                <div class="DisplayTab" tabUrl="NewHires"></div>
+                                <!-- <div class="DisplayTab" tabUrl="Leave"></div> -->
+                                <!-- <div class="DisplayTab" tabUrl="NewHires"></div> -->
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div style="display: flex;">
@@ -46,8 +46,8 @@
                     <div class="tab-pane" id="Profile">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 30%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="Profile"></div>
-                                <div class="DisplayTab" tabUrl="Reference"></div>
+                                <div class="DisplayTabCommon" tabName="Employee360Profile" tabUrl="EmployeeProfile"></div>
+                                <div class="DisplayTab" tabName="Employee360Profile" tabUrl="EmployeeReference"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTab" tabUrl="Experience"></div>
