In Progress - Inventory 360

--- a/displaytabs/InventoryUI-MainTemplate.html
+++ b/displaytabs/InventoryUI-MainTemplate.html
@@ -25,13 +25,13 @@
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
+                        <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
                     </div>
                     <div class="tab-pane" id="ActivePO">
                     </div>
                     <div class="tab-pane" id="EquipmentsMaterials">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
                                 <div class="DisplayTab" tabUrl="ActivePOForProduct"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
@@ -45,7 +45,7 @@
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="SearchProduct"></div>
+                                <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="SearchProduct"></div>
                             </div>
                         </div>
                     </div>
