--- a/home.html
+++ b/home.html
@@ -361,10 +361,12 @@
   <script src="js/modules/HrRequisitionUI.js"></script>
   <script src="js/modules/UserUI.js"></script>
   <script src="js/modules/EmployeeUI.js"></script>
+  <script src="js/modules/InventoryUI.js"></script>
 
   <script src="js/modules/submodules/PersonTaskUI.js"></script>
   <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
   <script src="js/modules/submodules/EmployeeTeamMemberUI.js"></script>
+  <script src="js/modules/submodules/ProductUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
