--- a/displaytabs/tabs/common/SearchProduct.html
+++ b/displaytabs/tabs/common/SearchProduct.html
@@ -4,7 +4,7 @@
     <div class="box-header ui-sortable-handle">
         <i class="fa fa-users"></i>
 
-        <h3 class="box-title">Search Equipments and Materials</h3>
+        <h3 class="box-title">Search</h3>
     </div>
     <div class="box-body">
         <div class="form-group">
@@ -12,6 +12,6 @@
         </div>
     </div>
 
-    <div class="box-body searchProducts" module="ProductUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+    <div class="box-body ProductUI_SearchProducts" module="ProductUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
     </div>
 </div>
