--- a/displaytabs/InventoryUI-MainTemplate.html
+++ b/displaytabs/InventoryUI-MainTemplate.html
@@ -11,9 +11,6 @@
                         <a href="#Dashboard" data-toggle="tab" aria-expanded="true">Dashboard</a>
                     </li>
                     <li class="tab-pane">
-                        <a href="#ActivePO" data-toggle="tab" aria-expanded="false">Active PO</a>
-                    </li>
-                    <li class="tab-pane">
                         <a href="#EquipmentsMaterials" data-toggle="tab" aria-expanded="false">Equipments/Materials</a>
                     </li>
                     <li class="tab-pane">
@@ -27,22 +24,13 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div class="DisplayTabCommon" tabUrl="ToDoList"></div>
                     </div>
-                    <div class="tab-pane" id="ActivePO">
-                    </div>
                     <div class="tab-pane" id="EquipmentsMaterials">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="ActivePOForProduct"></div>
+                                <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="ProductProfile"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div style="display: flex;">
-                                    <div style="flex: 40%">
-                                        <div class="DisplayTab" tabUrl="ProductProfile"></div>
-                                    </div>
-                                    <div style="flex: 60%; margin-left: 15px;">
-                                        <div class="DisplayTab" tabUrl="ProductAccountability"></div>
-                                    </div>
-                                </div>
+                                <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="ProductPurchaseOrder"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="SearchProduct"></div>
