--- a/displaytabs/PurchaseOrderUI-MainTemplate.html
+++ b/displaytabs/PurchaseOrderUI-MainTemplate.html
@@ -34,33 +34,30 @@
                     <div class="tab-pane" id="Suppliers">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="SupplierDashboard"></div>
+                                <div class="DisplayTabCommon" tabName="POSupplier" tabUrl="SupplierProfile"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="SupplierProfile"></div>
+                                <div class="DisplayTab" tabUrl="SupplierProductOffering"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="SupplierSearch"></div>
+                                <div class="DisplayTabCommon" tabName="POSupplier" tabUrl="SearchSupplier"></div>
                             </div>
                         </div>
                     </div>
                     <div class="tab-pane" id="Products">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="ProductProfile"></div>
+                                <div class="DisplayTabCommon" tabName="POProduct" tabUrl="ProductProfile"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div style="display: flex; flex-direction: column;">
                                     <div style="flex: 1;">
                                         <div class="DisplayTab" tabUrl="ActiveProductPO"></div>
                                     </div>
-                                    <div style="flex: 1;">
-                                        <div class="DisplayTab" tabUrl="ProductLastHandler"></div>
-                                    </div>
                                 </div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTab" tabUrl="ProductSearch"></div>
+                                <div class="DisplayTabCommon" tabName="POProduct" tabUrl="SearchProduct"></div>
                             </div>
                         </div>
                     </div>
