--- a/displaytabs/tabs/PurchaseOrderUI/SupplierProductOffering.html
+++ b/displaytabs/tabs/PurchaseOrderUI/SupplierProductOffering.html
@@ -2,11 +2,8 @@
 
 <div class="box box-default">
     <div class="box-header with-border">
-        <h3 class="box-title">Search Supplier</h3>
+        <h3 class="box-title">Product Offering</h3>
     </div>
     <div class="box-body">
-        <div class="form-group">
-            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Search Employee">
-        </div>
     </div>
 </div>
