--- a/home.html
+++ b/home.html
@@ -367,6 +367,7 @@
   <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
   <script src="js/modules/submodules/EmployeeTeamMemberUI.js"></script>
   <script src="js/modules/submodules/ProductUI.js"></script>
+  <script src="js/modules/submodules/SupplierUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
