--- a/displaytabs/InventoryUI-MainTemplate.html
+++ b/displaytabs/InventoryUI-MainTemplate.html
@@ -16,9 +16,9 @@
                     <li class="tab-pane">
                         <a href="#Location" data-toggle="tab" aria-expanded="false">Location</a>
                     </li>
-                    <li class="tab-pane">
+                    <!-- <li class="tab-pane">
                         <a href="#EmployeeAccountability" data-toggle="tab" aria-expanded="false">Employee Accountability</a>
-                    </li>
+                    </li> -->
                 </ul>
                 <div class="tab-content no-padding">
                     <div class="tab-pane active" id="Dashboard">
@@ -30,7 +30,7 @@
                                 <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="ProductProfile"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
-                                <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="ProductPurchaseOrder"></div>
+                                <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="ProductPO"></div>
                             </div>
                             <div style="flex: 25%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTabCommon" tabName="EquipmentsMaterials" tabUrl="SearchProduct"></div>
