--- a/displaytabs/tabs/common/ProductPO.html
+++ b/displaytabs/tabs/common/ProductPO.html
@@ -8,5 +8,6 @@
     </div>
 
     <div class="box-body ProductPurchaseOrderUI_SearchProducts" module="ProductPurchaseOrderUI" tabName="_TABNAME_" style="max-height: 500px; overflow-y: auto;">
+        <b>Please choose product</b>
     </div>
 </div>
