In Progress - Purchase Order 360

--- a/displaytabs/PurchaseOrderUI-MainTemplate.html
+++ b/displaytabs/PurchaseOrderUI-MainTemplate.html
@@ -24,7 +24,7 @@
                     <div class="tab-pane active" id="Dashboard">
                         <div style="display: flex; background: #ecf0f5;">
                             <div style="flex: 25%; margin: 15px 0px;">
-                                <div class="DisplayTab" tabUrl="RequestedItems"></div>
+                                <div class="DisplayTabCommon" tabName="Dashboard" tabUrl="RequestForProduct"></div>
                             </div>
                             <div style="flex: 50%; margin: 15px 0px; margin-left: 15px;">
                                 <div class="DisplayTabCommon" tabName="Dashboard" tabUrl="ActivePurchaseOrder"></div>
