--- a/home.html
+++ b/home.html
@@ -370,6 +370,7 @@
   <script src="js/modules/submodules/ProductUI.js"></script>
   <script src="js/modules/submodules/SupplierUI.js"></script>
   <script src="js/modules/submodules/AccountChartUI.js"></script>
+  <script src="js/modules/submodules/ProductRequestUI.js"></script>
 
   <script src="js/saas/ReviewCenter.js"></script>
   
