In Progress - Added Hospital and Government

--- a/home.html
+++ b/home.html
@@ -363,6 +363,8 @@
   <script src="js/modules/EmployeeUI.js"></script>
   <script src="js/modules/InventoryUI.js"></script>
   <script src="js/modules/AccountingUI.js"></script>
+  <script src="js/modules/GovernmentUI.js"></script>
+  <script src="js/modules/HospitalUI.js"></script>
 
   <script src="js/modules/submodules/PersonTaskUI.js"></script>
   <script src="js/modules/submodules/EmployeeTimeSheetUI.js"></script>
