In Progress - Government Real Esate

--- a/displaytabs/tabs/GovernmentUI/Header.html
+++ b/displaytabs/tabs/GovernmentUI/Header.html
@@ -18,7 +18,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-red"><i class="fa fa-fw fa-phone"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Present Today</span>
+                <span class="info-box-text">Assessment</span>
                 <span class="info-box-number HrRequisitionUI_TotalForInterview">98</span>
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-yellow"><i class="fa fa-fw fa-gear"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Active Projects</span>
+                <span class="info-box-text">Building Permit</span>
                 <span class="info-box-number HrRequisitionUI_OpenJobsCount">4</span>
             </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-blue"><i class="fa fa-fw fa-calendar"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">New Hires</span>
+                <span class="info-box-text">Field Inspection</span>
                 <span class="info-box-number HrRequisitionUI_ScheduleThisWeek">2</span>
             </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-green"><i class="fa fa-fw fa-money"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Attrition</span>
+                <span class="info-box-text">Real Estate Transfer</span>
                 <span class="info-box-number HrRequisitionUI_TotalForOffer">0</span>
             </div>
         </div>
