--- a/displaytabs/tabs/HospitalUI/Header.html
+++ b/displaytabs/tabs/HospitalUI/Header.html
@@ -9,7 +9,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-aqua"><i class="fa fa-fw fa-user"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Employees</span>
+                <span class="info-box-text">In Patient</span>
                 <span class="info-box-number HrRequisitionUI_CandidateCount">100</span>
             </div>
         </div>
@@ -18,7 +18,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-red"><i class="fa fa-fw fa-phone"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Present Today</span>
+                <span class="info-box-text">Out Patient</span>
                 <span class="info-box-number HrRequisitionUI_TotalForInterview">98</span>
             </div>
         </div>
@@ -27,7 +27,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-yellow"><i class="fa fa-fw fa-gear"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Active Projects</span>
+                <span class="info-box-text">Emergency</span>
                 <span class="info-box-number HrRequisitionUI_OpenJobsCount">4</span>
             </div>
         </div>
@@ -36,7 +36,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-blue"><i class="fa fa-fw fa-calendar"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">New Hires</span>
+                <span class="info-box-text">Laboratory</span>
                 <span class="info-box-number HrRequisitionUI_ScheduleThisWeek">2</span>
             </div>
         </div>
@@ -45,7 +45,7 @@
         <div class="info-box">
             <span class="info-box-icon bg-green"><i class="fa fa-fw fa-money"></i></span>
             <div class="info-box-content">
-                <span class="info-box-text">Attrition</span>
+                <span class="info-box-text">Radiology</span>
                 <span class="info-box-number HrRequisitionUI_TotalForOffer">0</span>
             </div>
         </div>
